# spikes

./: README.txt
cmake_hello_world/: README.txt
cmake_hello_world/cpp/: README.txt
cmake_hello_world/cpp/cmake/: CMakeLists.txt  README.txt  TESTED_PLATFORMS  main.cpp
cmake_hello_world/cpp/cmake_with_intel_compiler/: CMakeLists.txt  README.txt  TESTED_PLATFORMS
compile_time_gcd/: CMakeLists.txt  README.txt
cpp_template_metaprogramming/: README.txt
cpp_template_metaprogramming/factorial/: CMakeLists.txt  README.txt  main.cpp
cpp_template_metaprogramming/gcd/: main.cpp
files/stringstream/read_text_file/: CMakeLists.txt  README.txt  main.cpp
function_pointer/: CMakeLists.txt  function_pointer.cpp
opengl/: README.txt
opengl/4.1/: README.txt
opengl/4.1/common/: font_texture.cpp  opengl.h  shader.h
opengl/4.1/cube/: CMakeLists.txt  README.txt  lion_ogl32.patch  main.cpp
opengl/4.1/fbo/: CMakeCache.txt  CMakeLists.txt  README.txt  cat.ppm  fragment.c  fragmentDepth.c  main.cpp  oglwrapper.cpp  oglwrapper.h  trackball.cpp
opengl/4.1/font_rendering/: README.txt
opengl/4.1/font_rendering/all_glyphs_in_single_texture/: CMakeLists.txt  fragment.c  vertex.c
opengl/4.1/font_rendering/render_single_glyph/00/: CMakeLists.txt  font.cpp  main.cpp  platform_specific.h  shader.cpp  shader.h
opengl/4.1/font_rendering_coretext/: CMakeLists.txt  PlatformSpecifics.cmake  font_texture.h  main.cpp  texture.fsh  texture.vsh
opengl/4.1/font_rendering_freetype/: CMakeLists.txt  README.txt  config.h.in  font_texture.cpp  font_texture.h  main.cpp  platform_specific.h
opengl/4.1/font_rendering_objc/: CMakeLists.txt  OpenGLTexture.h  OpenGLTexture.mm  PlatformSpecifics.cmake  TextRender.h  TextRender.mm  TextRenderObjC.h  TextRenderObjC.m  font.cpp  font.h  font_texture.cpp  font_texture.h  font_texture_osx.cpp  font_texture_osx.h  main.cpp
opengl/4.1/fonts/: license.txt
opengl/4.1/frames_per_second/: CMakeLists.txt  PlatformSpecifics.cmake  README  main.cpp  shadow.fsh  shadow.vsh
opengl/4.1/freeimage_texture/: CMakeLists.txt  PlatformSpecifics.cmake  cactus.ppm  config.h.in  main.cpp  texture.fsh  texture.vsh
opengl/4.1/freetype/: font.cpp  font.h  main.cpp
opengl/4.1/geometry_shader/line_sprites/: CMakeLists.txt  OpenGL.h  README.txt  Shader.cpp  Shader.h  geometry.c  main.cpp  vertex.c
opengl/4.1/geometry_shader/passthrough/: CMakeLists.txt  OpenGL.h  Shader.cpp  Shader.h  fragment.c  geometry.c  main.cpp  oglwrapper.cpp  oglwrapper.h  platform_specific.h  vertex.c
opengl/4.1/glfw-2.7.2/: main.cpp  platform_specific.h
opengl/4.1/lion_glfw_patch/: README.txt
opengl/4.1/objreader/: CMakeLists.txt  PlatformSpecifics.cmake  README.txt  fragment.c  frank_mesh_smooth.mtl  glm.c  glm.cpp  glm.h  glslprogram.cpp  glslprogram.h  main.cpp  objmodel.cpp  objmodel.h  trackball.cpp  trackball.h  vertex.c
opengl/4.1/qt-4.7/: CMakeLists.txt  README.txt  core_profile_attributes.mm  main.cpp
opengl/4.1/rotating_tri/: PlatformSpecifics.cmake  README.txt  vertex.c
opengl/4.1/shader/: shader.cpp  shader.h
opengl/4.1/shadow_mapping/: CMakeLists.txt  README.txt  flat_fragment.c  flat_vertex.c  main.cpp  shadow.fsh  shadow_fragment.c  shadow_vertex.c  tex_fragment.c  tex_vertex.c
opengl/4.1/signed_distance_field/: CMakeLists.txt  PlatformSpecifics.cmake  README.txt  main.cpp  texture.fsh  texture.vsh
opengl/4.1/texture/: CMakeLists.txt  README.txt  main.cpp  trackball.h
opengl/4.1/trackball/: CMakeLists.txt  README.txt  fragment.c  main.cpp  vertex.c
opengl/4.1/triangle/: CMakeLists.txt  PlatformSpecifics.cmake  README.txt  main.c  main.cpp
openni/cmake/: FindOpenNI.cmake  FindOpenNI.cmake.bak1
openni/skeleton_tracker/: CMakeLists.txt  main.cpp  main.cpp.bak  opengl.h  platform_specific.h  shader.cpp  shader.h
openni/user_tracker/: CMakeLists.txt  SceneDrawer.cpp  SceneDrawer.h  main.cpp
qt/: README.txt
qt/hello_world/: CMakeLists.txt  README.txt  main.cpp
qt/hello_world_quit_button/: CMakeLists.txt  README.txt  main.cpp
